@@ -11,6 +11,7 @@ Version 3.0.1 June 1, 2006
 ==========================
 BUG: Ticket#44 - THtmlArea (tiny_mce) not working on some systems (Qiang)
 BUG: Ticket#167 - TSecurityManager issues warning when trying to encrypt/decrypt strings (Qiang)
+BUG: Ticket#179 - CGI incompatibility causing clientscripts.php failure (Qiang)
 ENH: Ticket#150 - TDataGrid and TDataList now render table section tags (Qiang)
 ENH: Ticket#152 - constituent parts of TWizard are exposed (Qiang)
 ENH: added sanity check to calling event handlers (Qiang)
@@ -18,6 +19,7 @@ ENH: added search for quickstart tutorials (Wei)
 ENH: added support to property tags for template owner control (Qiang)
 ENH: added Bulgarian requirement checker messages (StanProg)
 ENH: added TTheme.BaseUrl and TTheme.BasePath property (Qiang)
+ENH: refactored TUserManager and TAuthManager so that they are easier to be extended (Qiang)
 CHG: Ticket#151 - URL format is modified to handle empty GET values (Qiang)
 CHG: Ticket#153 - TAssetManager now ignores .svn directories (Qiang)
 NEW: TTableHeaderRow, TTableFooterRow and table section support (Qiang)
